@@ -165,12 +165,17 @@ pressing a key.
 - a wine manager for linux users.
 </li></ul>
 
+<ul><li><a href="http:/www.geocities.com/juergendankoweit/gpowershot.html">
+gPowershot</a>
+- a tool for fetching images from digital-cameras and storing
+them in a PostgreSQL-database, filesystem or on CD/DVD (in German).
+</li></ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
-<ul>
-<li><a href=""></a> -
-
-</ul>
+<ul><li><a href=""></a>
+-
+</li></ul>
 -->
 
 </div>
