@@ -1,3 +1,7 @@
+2005-03-26  Damon Chaplin  <damon@gnome.org>
+
+	* apps.html: added gPowershot.
+
 2005-03-25  Damon Chaplin  <damon@gnome.org>
 
 	* *.html: new website design from Joao Victor.
